--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fancybox": "^0.2.5",
     "react-google-maps": "^9.4.5",
+    "react-image-gallery": "^1.0.7",
     "react-lines-ellipsis": "^0.14.1",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
