--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-image-gallery": "^1.0.7",
     "react-lines-ellipsis": "^0.14.1",
     "react-loader-spinner": "^3.1.14",
+    "react-phone-input-2": "^2.13.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
