--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clsx": "^1.1.1",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
+    "formik": "^2.1.5",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -20,13 +21,15 @@
     "react-lines-ellipsis": "^0.14.1",
     "react-loader-spinner": "^3.1.14",
     "react-phone-input-2": "^2.13.7",
+    "react-phone-number-input": "^3.0.24",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "stylelint": "^13.5.0"
+    "stylelint": "^13.5.0",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
