--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-phone-input-2": "^2.13.7",
     "react-phone-number-input": "^3.0.24",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
