add addAd objects

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "formik": "^2.1.5",
+    "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.2",
     "react-fancybox": "^0.2.5",
     "react-google-maps": "^9.4.5",
     "react-image-gallery": "^1.0.7",
