--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-sizes": "^2.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "stylelint": "^13.5.0",
